--- a/embed.html
+++ b/embed.html
@@ -1,11 +1,16 @@
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'ab0e46e26a2ae36b08743dec85dffde5',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.madcpms.com/ab0e46e26a2ae36b08743dec85dffde5/invoke.js"></scr' + 'ipt>');
-</script>
-<iframe data-aa="1310511" src="//ad.a-ads.com/1310511?size=120x60" scrolling="no" style="width:120px; height:60px; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
+<!DOCTYPE html>
+<html>
+	<body>
+		<script type="text/javascript">
+			atOptions = {
+				'key' : 'ab0e46e26a2ae36b08743dec85dffde5',
+				'format' : 'iframe',
+				'height' : 60,
+				'width' : 468,
+				'params' : {}
+			};
+			document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.madcpms.com/ab0e46e26a2ae36b08743dec85dffde5/invoke.js"></scr' + 'ipt>');
+		</script>
+		<iframe data-aa="1310511" src="//ad.a-ads.com/1310511?size=120x60" scrolling="no" style="width:120px; height:60px; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
+	</body>
+</html>
