--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><head><meta name="maValidation" content="eaed86bac5e0ae00112ea9e53b071c42" /><script async src="https://www.googletagmanager.com/gtag/js?id=UA-149874531-2"></script><script>window.dataLayer = window.dataLayer || [];
+<!DOCTYPE html><html lang=en><head><script data-ad-client="ca-pub-4816773762296556" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><script async src="https://www.googletagmanager.com/gtag/js?id=UA-149874531-2"></script><script>window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
