--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><head><script async src="https://www.googletagmanager.com/gtag/js?id=UA-149874531-2"></script><script>window.dataLayer = window.dataLayer || [];
+<!DOCTYPE html><html lang=en><head><meta name="hilltopads-site-verification" content="4559c620b37fba2e07d3080c625fbf92e2037a21" /><script async src="https://www.googletagmanager.com/gtag/js?id=UA-149874531-2"></script><script>window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
