--- a/embed.html
+++ b/embed.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<script>
-(function(__htas){
-var d = document,
-    s = d.createElement('script'),
-    l = d.scripts[d.scripts.length - 1];
-s.settings = __htas || {};
-s.src = "\/\/ackbure.pro\/arW.ZzyBQL2D9zkuZXTc9t6kbx2x5\/lNS-WJQ\/9pNgDREVzvNWTgAOwLMrym0j0\/MkT\/Mb1VMTDCAp0NJVnPBp1Hca2Zh\/afbk2T5blMSZWBQ\/9QNXDCE_zqNKT-APwsMLyG0r0DMlTRMb1CMyDvAc0j";
-l.parentNode.insertBefore(s, l);
-})({})
+		<iframe src="http://onvictinitor.com/afu.php?zoneid=3035710" style="height: 100px; width: 200px;"></iframe>
 </script>
 		<script data-cfasync='false' type='text/javascript' src='//p380970.clksite.com/adServe/banners?tid=380970_747857_0'></script>
 	</body>
