--- a/embed1.html
+++ b/embed1.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<style>
+			* {
+				display: none;
+			}
+		</style>
+	</head>
 	<body>
 		<script async="async" data-cfasync="false" src="//pl15279070.passeura.com/95b49c772733f79f2aec01955f54a8d2/invoke.js"></script>
 		<div id="container-95b49c772733f79f2aec01955f54a8d2"></div>
