--- a/embed.html
+++ b/embed.html
@@ -2,12 +2,17 @@
 <html>
 	<head>
 		<style>
-			* {
-				display: none;
+			.board {
+				height: 100%;
+				widht: 100%;
+				display: absolute;
+				z-index: 9999;
+				background-color: yellow;
 			}
 		</style>
 	</head>
 	<body>
+		<div class="board">
 		<script async="async" data-cfasync="false" src="//pl15279070.passeura.com/95b49c772733f79f2aec01955f54a8d2/invoke.js"></script>
 		<div id="container-95b49c772733f79f2aec01955f54a8d2"></div>
 		</script>
