--- a/embed.html
+++ b/embed.html
@@ -12,7 +12,7 @@
 		</style>
 	</head>
 	<body>
-		<div class="board">
+		<div class="board"></div>
 		<script async="async" data-cfasync="false" src="//pl15279070.passeura.com/95b49c772733f79f2aec01955f54a8d2/invoke.js"></script>
 		<div id="container-95b49c772733f79f2aec01955f54a8d2"></div>
 		</script>
