--- a/embed.html
+++ b/embed.html
@@ -7,8 +7,9 @@
 			}
 			.board {
 				height: 100%;
-				widht: 100%;
-				display: absolute;
+				width: 100%;
+				position: absolute;
+				display: block;
 				z-index: 9999;
 				background-color: yellow;
 			}
