--- a/embed.html
+++ b/embed.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 		<div class="board">:)</div>
-		<script async="async" data-cfasync="false" src="//pl15279070.passeura.com/95b49c772733f79f2aec01955f54a8d2/invoke.js"></script>
+<!-- 		<script async="async" data-cfasync="false" src="//pl15279070.passeura.com/95b49c772733f79f2aec01955f54a8d2/invoke.js"></script>
 		<div id="container-95b49c772733f79f2aec01955f54a8d2"></div>
 		</script>
 		<script type="text/javascript">
@@ -39,7 +39,7 @@
 				'params' : {}
 			};
 			document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.madcpms.com/ab0e46e26a2ae36b08743dec85dffde5/invoke.js"></scr' + 'ipt>');
-		</script>
+		</script> -->
 		<script data-cfasync='false' type='text/javascript' src='//p380970.clksite.com/adServe/banners?tid=380970_747857_0'></script>
 	</body>
 </html>
