--- a/embed1.html
+++ b/embed1.html
@@ -2,33 +2,37 @@
 <html>
 	<head>
 		<style>
+			.adsterra {
+				opacity: 0;
 		</style>
 	</head>
 	<body>
-		<div class="board">:)</div>
- 		<script async="async" data-cfasync="false" src="//pl15279070.passeura.com/95b49c772733f79f2aec01955f54a8d2/invoke.js"></script>
-		<div id="container-95b49c772733f79f2aec01955f54a8d2"></div>
-		</script>
-		<script type="text/javascript">
-			atOptions = {
-				'key' : 'ab0e46e26a2ae36b08743dec85dffde5',
-				'format' : 'iframe',
-				'height' : 60,
-				'width' : 468,
-				'params' : {}
-			};
-			document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.madcpms.com/ab0e46e26a2ae36b08743dec85dffde5/invoke.js"></scr' + 'ipt>');
-		</script>
-		<script type="text/javascript">
-			atOptions = {
-				'key' : 'ab0e46e26a2ae36b08743dec85dffde5',
-				'format' : 'iframe',
-				'height' : 60,
-				'width' : 468,
-				'params' : {}
-			};
-			document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.madcpms.com/ab0e46e26a2ae36b08743dec85dffde5/invoke.js"></scr' + 'ipt>');
-		</script>
+		<div style="height: 100%; width: 100%; font-size: 60px">Ayyy</div>
+		<div class="adsterra">
+			<script async="async" data-cfasync="false" src="//pl15279070.passeura.com/95b49c772733f79f2aec01955f54a8d2/invoke.js"></script>
+			<div id="container-95b49c772733f79f2aec01955f54a8d2"></div>
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					'key' : 'ab0e46e26a2ae36b08743dec85dffde5',
+					'format' : 'iframe',
+					'height' : 60,
+					'width' : 468,
+					'params' : {}
+				};
+				document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.madcpms.com/ab0e46e26a2ae36b08743dec85dffde5/invoke.js"></scr' + 'ipt>');
+			</script>
+			<script type="text/javascript">
+				atOptions = {
+					'key' : 'ab0e46e26a2ae36b08743dec85dffde5',
+					'format' : 'iframe',
+					'height' : 60,
+					'width' : 468,
+					'params' : {}
+				};
+				document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.madcpms.com/ab0e46e26a2ae36b08743dec85dffde5/invoke.js"></scr' + 'ipt>');
+			</script>
+		</div>
 		<script data-cfasync='false' type='text/javascript' src='//p380970.clksite.com/adServe/banners?tid=380970_747857_0'></script>
 	</body>
 </html>
