--- a/embed1.html
+++ b/embed1.html
@@ -2,12 +2,16 @@
 <html>
 	<head>
 		<style>
+			body {
+				overflow: scroll;
+			}
 			.adsterra {
 				opacity: 0;
 		</style>
 	</head>
 	<body>
 		<div style="height: 100%; width: 100%; font-size: 60px">Ayyy</div>
+		<script data-cfasync='false' type='text/javascript' src='//p380970.clksite.com/adServe/banners?tid=380970_747857_0'></script>
 		<div class="adsterra">
 			<script async="async" data-cfasync="false" src="//pl15279070.passeura.com/95b49c772733f79f2aec01955f54a8d2/invoke.js"></script>
 			<div id="container-95b49c772733f79f2aec01955f54a8d2"></div>
@@ -33,6 +37,5 @@
 				document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.madcpms.com/ab0e46e26a2ae36b08743dec85dffde5/invoke.js"></scr' + 'ipt>');
 			</script>
 		</div>
-		<script data-cfasync='false' type='text/javascript' src='//p380970.clksite.com/adServe/banners?tid=380970_747857_0'></script>
 	</body>
 </html>
