--- a/embed1.html
+++ b/embed1.html
@@ -10,7 +10,7 @@
 		</style>
 	</head>
 	<body>
-		<div style="height: 100%; width: 100%; font-size: 60px">Ayyy</div>
+		<div style="height: 100%; width: 100%; font-size: 35px">Join the Discord to get daily promo codes!</div>
 		<script data-cfasync='false' type='text/javascript' src='//p380970.clksite.com/adServe/banners?tid=380970_747857_0'></script>
 		<div class="adsterra">
 			<script async="async" data-cfasync="false" src="//pl15279070.passeura.com/95b49c772733f79f2aec01955f54a8d2/invoke.js"></script>
