--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<body style="background: green">
-		<iframe sandbox="allow-scripts" src="https://www.buxearn.com/embed1.html" style="height: 200px; width: 100%"></iframe>
+		<iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="https://www.buxearn.com/embed1.html" style="height: 200px; width: 100%"></iframe>
 	</body>
 </html>
