--- a/embed1.html
+++ b/embed1.html
@@ -3,10 +3,10 @@
 	<head>
 		<style>
 			body {
-				overflow: hidden;
+				overflow: scroll;
 			}
 			.adsterra {
-				padding-top: 180px;
+				padding-top: 200px;
 			}
 		</style>
 	</head>
