--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html lang=en><head><script async src="https://www.googletagmanager.com/gtag/js?id=UA-149874531-2"></script><script>window.dataLayer = window.dataLayer || [];
+<!DOCTYPE html><html lang=en><head>
+      <meta name="exoclick-site-verification" content="e7c908d5abeb38291ea849f03fcb7a51">
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149874531-2"></script><script>window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
