--- a/embed1.html
+++ b/embed1.html
@@ -8,6 +8,15 @@
 		</style>
 	</head>
 	<body>
+		<script type="text/javascript">
+    var ad_idzone = "3689523",
+    ad_width = "300",
+    ad_height = "250"
+</script>
+<script type="text/javascript" src="https://a.exdynsrv.com/ads.js"></script>
+<noscript>
+    <iframe src="https://syndication.exdynsrv.com/ads-iframe-display.php?idzone=3689523&output=noscript&type=300x250" width="300" height="250" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
+</noscript>
 		<div style="height: 100%; width: 100%; font-size: 35px">Join the Discord to get daily promo codes!</div>
 		<script data-cfasync='false' type='text/javascript' src='//p380970.clksite.com/adServe/banners?tid=380970_747857_0'></script>
 	</body>
