--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html><html lang=en><head><script async src="https://www.googletagmanager.com/gtag/js?id=UA-149874531-2"></script><script>window.dataLayer = window.dataLayer || [];
+<!DOCTYPE html><html lang=en><head>
+      <meta name="mylead-verification" content="34d270df50d7339100975cb6d457e05c">
+      
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149874531-2"></script><script>window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
