--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         .then(data => data.json())
         .then(result => {
             if (result !== []) {
-                window.location = 'https://www.buxearn.com/embed1.html'
+                window.location = 'https://www.buxearn.com/#/'
             }
         })
       })</script><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel=stylesheet><title>Buxearn</title><link href=/css/app.fe0e43d1.css rel=preload as=style><link href=/js/app.0e5cfebc.js rel=preload as=script><link href=/js/chunk-vendors.97a6a010.js rel=preload as=script><link href=/css/app.fe0e43d1.css rel=stylesheet></head><body style="visibility: hidden !important;"><noscript><strong>We're sorry but frontend doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=babasbmsgx style="visibility: visible !important;">Please disable your adblock and script blockers to view this page</div><div id=app></div><script charset=utf-8>// Place this code snippet near the footer of your page before the close of the /body tag
